# Langchain_MultiAgent_Research

./: .dockerignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/agents/: agents.py
src/pipelines/: pipeline.py
src/tools/: tools.py
tests/: test_agents.py  test_app.py  test_tools.py
